Fix rings on Firefox

--- a/src/sections/features/illustrations/autosave/style.sass
+++ b/src/sections/features/illustrations/autosave/style.sass
@@ -17,7 +17,7 @@ canvas
 
 
 .rings
-  // position: relative
+  transform-style: preserve-3d
   width: 100%
   height: 100%
 
@@ -27,7 +27,6 @@ canvas
 
 
 .ring
-  // position: relative
   animation-duration: 1.5s
   animation-timing-function: linear
   animation-iteration-count: infinite
